Fix counter picking

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -43,6 +43,7 @@ found in the LICENSE file.
     'settings_test.html',
     'tracks/timeline_async_slice_group_track_test.html',
     'tracks/timeline_cpu_track_test.html',
+    'tracks/timeline_counter_track_test.html',
     'tracks/timeline_slice_group_track_test.html',
     'tracks/timeline_slice_track_test.html',
     'tracks/timeline_thread_track_test.html',
