--- a/trunk/src/tracks/timeline_counter_track_test.html
+++ b/trunk/src/tracks/timeline_counter_track_test.html
@@ -12,7 +12,7 @@ found in the LICENSE file.
   border: 1px solid red;
 }
 </style>
-<script src="base.js"></script>
+<script src="/src/base.js"></script>
 <script>
   base.require('unittest');
   base.require('test_utils');
@@ -24,7 +24,9 @@ found in the LICENSE file.
   'use strict';
 
   var TimelineCounter = tracing.TimelineCounter;
-  var TimelineCounterTrack = tracing.TimelineCounterTrack;
+  var TimelineViewport = tracing.TimelineViewport;
+  var TimelineCounterTrack = tracks.TimelineCounterTrack;
+
 
   function testBasicCounter() {
     var testEl = this.addHTMLOutput();
@@ -53,7 +55,7 @@ found in the LICENSE file.
     track.viewport.xSetWorldRange(0, 7.7, track.clientWidth);
   }
 
-  function runOffscreenCounterTest(timestamps, samples, testFn) {
+  function runTest(timestamps, samples, testFn) {
     var testEl = document.createElement('div');
     var ctr = new TimelineCounter(undefined,
                                   'foo', '', 'foo');
@@ -75,13 +77,10 @@ found in the LICENSE file.
     track.heading = ctr.name;
     track.counter = ctr;
     track.viewport = new TimelineViewport(testEl);
-    track.viewport.xSetWorldRange(0, 10, track.clientWidth);
+    track.viewport.xSetWorldRange(0, 10,
+        track.firstCanvas.getBoundingClientRect().width);
 
-    try {
-      testFn(ctr, track);
-    } finally {
-      document.body.removeChild(testEl);
-    }
+    testFn(ctr, track);
   }
 
   function testBasicCounterXPointPicking() {
@@ -94,14 +93,16 @@ found in the LICENSE file.
                    1, 7,
                    3, 0,
                    3.1, 0.5];
-    runOffscreenCounterTest(timestamps, samples, function(ctr, track) {
-      var clientRect = track.getBoundingClientRect();
+    runTest.call(this, timestamps, samples, function(ctr, track) {
+      var clientRect = track.firstCanvas.getBoundingClientRect();
       var y75 = clientRect.top + 0.75 * clientRect.height;
       var sel;
+      var vW = 10;
+      var wW = clientRect.width;
 
       // In bounds.
       sel = new tracing.TimelineSelection();
-      track.addIntersectingItemsToSelection(1.5, y75, sel);
+      track.addIntersectingItemsToSelection((1.5/vW)*wW, y75, sel);
       assertEquals(1, sel.length);
       assertEquals(track, sel[0].track);
       assertEquals(ctr, sel[0].counter);
@@ -109,11 +110,11 @@ found in the LICENSE file.
 
       // Outside bouds.
       sel = new tracing.TimelineSelection();
-      track.addIntersectingItemsToSelection(-1, y75, sel);
+      track.addIntersectingItemsToSelection((-1/vW)*wW, y75, sel);
       assertEquals(0, sel.length);
 
       sel = new tracing.TimelineSelection();
-      track.addIntersectingItemsToSelection(8, y75, sel);
+      track.addIntersectingItemsToSelection((8/vW)*wW, y75, sel);
       assertEquals(0, sel.length);
     });
   }
