Add support for Android's systrace.
This change adds a parser for the trace markers inserted by the userland
Android framework.  It also adds support for generating a python file
containing the list of .js and .css files for use by Android's systrace.py
script.

Review URL: https://codereview.appspot.com/6530049

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -23,6 +23,7 @@ found in the LICENSE file.
     'timeline_filter_test.html',
     'timeline_model_test.html',
     'linux_perf_importer_test.html',
+    'linux_perf_android_parser_test.html',
     'linux_perf_cpufreq_parser_test.html',
     'linux_perf_drm_parser_test.html',
     'linux_perf_exynos_parser_test.html',
