--- a/trunk/src/analysis/selection_analysis_test.html
+++ b/trunk/src/analysis/selection_analysis_test.html
@@ -70,7 +70,7 @@ found in the LICENSE file.
       this.addHTMLOutput(undefined, analysis);
     }
 
-    function FAILS_testSelectionAnalysisWithSlicesAndCounters() {
+    function testSelectionAnalysisWithSlicesAndCounters() {
 
       var data = tracing.createReferenceData(true);
 
@@ -83,12 +83,21 @@ found in the LICENSE file.
 
       var selectionEl = analysis;
       var sliceSelectionEl = selectionEl.children[0];
+      var counterSelectionEl = selectionEl.children[1];
+
+      assertEquals(true, sliceSelectionEl instanceof
+          tracing.SliceSelectionAnalysis);
+      assertEquals(true, counterSelectionEl instanceof
+          tracing.CounterSelectionAnalysis);
+      assertEquals(2, selectionEl.children.length);
+      assertEquals(6, sliceSelectionEl.children.length);
+      assertEquals(2, counterSelectionEl.children.length);
 
       this.addHTMLOutput(undefined, analysis);
 
     }
 
-    function FAILS_testSelectionAnalysisWithSingleCounter() {
+    function testSelectionAnalysisWithSingleCounter() {
       var data = tracing.createReferenceData(true);
 
       var selection = new tracing.TimelineSelection();
@@ -99,17 +108,46 @@ found in the LICENSE file.
 
       var selectionEl = analysis;
       var counterSelectionEl = selectionEl.children[0];
-      var singleCounterEl = counterSelectionEl.children[0];
+      var singleCounterEl = counterSelectionEl.children[1];
+
+      assertEquals(true, analysis instanceof tracing.SelectionAnalysis);
+      assertEquals(true, counterSelectionEl instanceof
+          tracing.CounterSelectionAnalysis);
+      assertEquals(true, singleCounterEl instanceof
+          tracing.SingleCounterSelectionAnalysis);
+      assertEquals(2, counterSelectionEl.children.length);
+      assertEquals(1, singleCounterEl.children.length);
 
       this.addHTMLOutput(undefined, analysis);
     }
 
-    function FAILS_testSelectionAnalysisWithMultipleCounters_view() {
+    function testSelectionAnalysisWithMultipleCounters() {
+      var data = tracing.createReferenceData(true);
 
-    }
+      var selection = new tracing.TimelineSelection();
+      selection.addCounterSample(data.ctr1track, data.ctr1track.counter, 0);
+      selection.addCounterSample(data.ctr2track, data.ctr2track.counter, 3);
 
-    function FAILS_testSelectionAnalysisWithMultipleCounters_analysis() {
+      var analysis = new tracing.SelectionAnalysis();
+      analysis.selection = selection;
 
+      var selectionEl = analysis;
+      var counterSelectionEl = selectionEl.children[0];
+      var singleCounterEl = counterSelectionEl.children[1];
+      var singleCounterEl2 = counterSelectionEl.children[2];
+
+      assertEquals(true, analysis instanceof tracing.SelectionAnalysis);
+      assertEquals(true, counterSelectionEl instanceof
+          tracing.CounterSelectionAnalysis);
+      assertEquals(true, singleCounterEl instanceof
+          tracing.SingleCounterSelectionAnalysis);
+      assertEquals(true, singleCounterEl2 instanceof
+          tracing.SingleCounterSelectionAnalysis);
+      assertEquals(3, counterSelectionEl.children.length);
+      assertEquals(1, singleCounterEl.children.length);
+      assertEquals(1, singleCounterEl2.children.length);
+
+      this.addHTMLOutput(undefined, analysis);
     }
 
   </script>
